--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,3 +28,4 @@ jobs:
           args: release --clean
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GORELEASER_HOMEBREW_GITHUB_TOKEN: ${{ GORELEASER_HOMEBREW_GITHUB_TOKEN }}
